# MySearch-for-.txt

./: .gitignore  CMakeLists.txt  LICENSE  README.md
GoogleTests/: test.cpp
MySearchApp/: MySearchApp.rc  Resource.aps  resource.h
MySearchApp/include/: App.h  FileReader.h  Localization.h  NotepadHighlighter.h  ResultItem.h  ResultsDialog.h  SearchDialog.h  SearchEngine.h
MySearchApp/src/: App.cpp  FileReader.cpp  Localization.cpp  NotepadHighlighter.cpp  ResultsDialog.cpp  SearchDialog.cpp  SearchEngine.cpp  main.cpp
MySearchShell/: MySearchShell.cpp  MySearchShell.def
